--- a/aula16ex/ex018/index.html
+++ b/aula16ex/ex018/index.html
@@ -12,7 +12,7 @@
     </header>
     <section>
       <div>
-        Número (entre 1 e 100):
+        número (entre 1 e 100):
         <input type="number" name="fnum" id="fnum" />
         <input type="button" value="Adicionar" onclick="adicionar()" />
         <br /><br /><select name="flista" id="flista" size="6"></select>
